*카테고리 추가 기능 추가중  Category Entity 생성  기본 Category 추가 init.sql에 넣어둠  modal 생성  카테고리 추가 Request 구현해야함 (0221)

--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -6,6 +6,7 @@ cloud.region=kr-standard
 ##h2
 spring.h2.console.enabled= true
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.data= classpath:testPosts.sql
 
 #spring.datasource.name=yourdbname
 #spring.datasource.driverClassName=org.h2.Driver
