--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ cloud.region=kr-standard
 ##h2
 spring.h2.console.enabled= true
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.data= classpath:testPosts.sql
 
 #spring.datasource.name=yourdbname
 #spring.datasource.driverClassName=org.h2.Driver
