--- a/build.gradle
+++ b/build.gradle
@@ -33,10 +33,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-web-services'
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws'
-	//implementation 'org.springframework.cloud:spring-cloud-starter-aws'
 	runtimeOnly 'com.h2database:h2'
 	compileOnly 'org.projectlombok:lombok'
-	compile("org.springframework.boot:spring-boot-starter-security")
+	compile('org.springframework.boot:spring-boot-autoconfigure')
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
