--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,10 @@ cloud.accessKey=5BF6BA90888BF5B47599
 cloud.secretKey=7EB3DB126A2BD0896BBE75F9C97A1D02C6518B46
 cloud.endPoint=https://kr.object.ncloudstorage.com
 cloud.region=kr-standard
+cloud.aws.s3.bucket=he-product
+
+
+
 ##h2
 spring.h2.console.enabled= true
 spring.jpa.hibernate.ddl-auto=update
