--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,7 @@ spring.datasource.data= classpath:init.sql
 spring.servlet.multipart.max-file-size = 100MB
 spring.servlet.multipart.file-size-threshold = 100MB
 spring.servlet.multipart.max-request-size = 100MB
+
+
+##auto rebuild
+spring.devtools.livereload.enabled=true
