--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,15 +8,22 @@ cloud.aws.s3.bucket=he-product
 
 
 ##h2
-spring.h2.console.enabled= true
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.data= classpath:init.sql
-
+#spring.h2.console.enabled= true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.data= classpath:init.sql
 #spring.datasource.name=yourdbname
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.initialize=false
 #spring.datasource.url=jdbc:h2:file:~/yourdbname;DB_CLOSE_ON_EXIT=FALSE;IFEXISTS=TRUE;DB_CLOSE_DELAY=-1;
 #spring.jpa.hibernate.ddl-auto = update
+
+##datasource
+spring.datasource.url=jdbc:sqlserver://192.168.0.33:5020;DatabaseName=HEPDRE
+spring.datasource.username=HEAGClient
+spring.datasource.password=dprtmfpdl@21
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.mvc.view.prefix=/WEB-INF/views/
+
 
 
 ##multipart
