--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,8 @@ spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 #spring.mvc.view.prefix=/WEB-INF/views/
 
 
+#tomcat
+server.port= 80
 
 ##multipart
 spring.servlet.multipart.max-file-size = 100MB
