category & post oneToMany relation 추가

--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -18,7 +18,7 @@ cloud.aws.s3.bucket=he-product
 #spring.jpa.hibernate.ddl-auto = update
 
 ##datasource
-spring.datasource.url=jdbc:sqlserver://192.168.0.33:5020;DatabaseName=HEPDRE
+spring.datasource.url=jdbc:sqlserver://localhost:5020;DatabaseName=HEPDRE
 spring.datasource.username=HEAGClient
 spring.datasource.password=dprtmfpdl@21
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
@@ -26,7 +26,7 @@ spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 
 #tomcat
-server.port= 80
+server.port= 8080
 
 ##multipart
 spring.servlet.multipart.max-file-size = 100MB
