파일 업로드시 local에 저장 되는것 지정 경로에 저장 되게 수정. /new 로드시 post 객체 생성 하는것 싱글톤에 맞지않아 수정

--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -5,7 +5,7 @@ cloud.endPoint=https://kr.object.ncloudstorage.com
 cloud.region=kr-standard
 cloud.aws.s3.bucket=he-product
 
-file.path=C://HawkEyes
+file.path=C://heproduct
 
 ##h2
 #spring.h2.console.enabled= true
