--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ cloud.endPoint=https://kr.object.ncloudstorage.com
 cloud.region=kr-standard
 cloud.aws.s3.bucket=he-product
 
-file.path=C://HawkEyes
+file.path=C://heproduct
 
 ##h2
 #spring.h2.console.enabled= true
