사용자 관리 디자인, 조회 bin경로 예외

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ cloud.aws.s3.bucket=he-product
 
 file.path=C://heproduct
 
+spring.jpa.show-sql=true
 ##h2
 #spring.h2.console.enabled= true
 #spring.jpa.hibernate.ddl-auto=update
@@ -18,7 +19,7 @@ file.path=C://heproduct
 #spring.jpa.hibernate.ddl-auto = update
 
 ##datasource
-spring.datasource.url=jdbc:sqlserver://localhost:5020;DatabaseName=HEPDRE
+spring.datasource.url=jdbc:sqlserver://192.168.0.33:5020;DatabaseName=HEPDRE
 spring.datasource.username=HEAGClient
 spring.datasource.password=dprtmfpdl@21
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
